--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="action_settings">Settings</string>
     <string name="sortby_popular">Sort By Popular</string>
     <string name="sortby_toprated">Sort By Top Rated</string>
+    <string name="error_message">An error has occurred. Please try again by clicking REFRESH</string>
+    <string name="action_refresh">Refresh</string>
 </resources>
