--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="error_message">An error has occurred. Please try again and Refresh</string>
     <string name="action_refresh">Refresh</string>
     <string name="mark_favorite">MARK AS FAVORITE</string>
+    <string name="filter_favorites">Filter By Favorites</string>
 </resources>
