--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="action_refresh">Refresh</string>
     <string name="mark_favorite">MARK AS FAVORITE</string>
     <string name="filter_favorites">Filter By Favorites</string>
+    <string name="tv_reviews_title">Reviews</string>
+    <string name="tv_trailers_title">Trailers</string>
 </resources>
