--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="filter_favorites">Filter By Favorites</string>
     <string name="tv_reviews_title">Reviews</string>
     <string name="tv_trailers_title">Trailers</string>
+    <string name="action_share">Share</string>
 </resources>
